[package]
name = "flyio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-channel = "2.2.0"
futures = "0.3.30"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
